chore: integrate Spotless formatter for backend, format Java files, and update CI